[package]
name = "madome-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
hyper = { version = "0.14", features = ["server"] }
uuid = { version = "0.8", features = ["v4"] }
jsonwebtoken = "7.2"
reqwest = { version = "0.11", features = ["json"] }
sai = "0.1"
thiserror = "1.0"
dotenv = "0.15"
aws-config = { version = "0.5", features = ["native-tls", "rt-tokio"], default-features = false }
aws-sdk-sesv2 = { version = "0.5", features = ["native-tls", "rt-tokio"], default-features = false }
nanoid = "0.4"
log = "0.4"
simple_logger = "2.1"
chrono = { version = "0.4", features = [] }
inspect = { git = "https://github.com/syrflover/inspect-rs" }
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.13"
ring = "0.16"
querystring = "1.1"
redis = { version = "0.21", features = ["tokio-comp"] }
futures-util = "0.3"
util = { path = "../util" }
madome-sdk = { path = "../madome-sdk", features = ["server"] }
