[package]
name = "madome-auth"
version = "0.1.1"
edition = "2021"

[features]
aws-ses = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["macros", "sync", "signal", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
hyper = { version = "0.14", features = ["server"] }
uuid = { version = "0.8", features = ["v4"] }
jsonwebtoken = "8.0"
reqwest = { version = "0.11", features = ["json"] }
sai = "0.1"
thiserror = "1.0"
dotenv = "0.15"
aws-config = "0.6"
aws-sdk-sesv2 = "0.6"
nanoid = "0.4"
log = "0.4"
simple_logger = "2.1"
chrono = { version = "0.4", features = [] }
inspect = { git = "https://github.com/syrflover/inspect-rs" }
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.13"
ring = "0.16"
querystring = "1.1"
redis = { version = "0.21", features = ["tokio-comp"] }
futures-util = "0.3"
util = { git = "https://github.com/syrflover/util-rs", tag = "0.1.0" }
madome-sdk = { git = "https://github.com/Project-Madome/madome-sdk-rs", tag = "0.1.0", features = ["server"] }
